--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="botonBorrar">C</string>
     <string name="resultado"></string>
     <string name="botonIgual">=</string>
+    <string name="botonMultiplicacion">*</string>
 </resources>
